# text_similarity

./: .env.exemple  .gitignore  .readthedocs.yaml  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml  tmp_test_date.py  tmp_test_date2.py
.github/workflows/: pipeline.yaml  publish.yaml
benchmarks/: benchmark_strategies.py  benchmark_vectorized.py
mkdocs_docs/: index.md  requirements.txt
mkdocs_docs/api/: comparator.md  core.md  pipeline.md
mkdocs_docs/guide/: entities.md  installation.md  usage.md
scripts/: benchmark_batch.py
src/text_similarity/: __init__.py  api.py  exceptions.py
src/text_similarity/core/: __init__.py  base.py  bm25.py  cosine.py  dense.py  entity_overlap.py  fusion.py  hybrid.py  phonetic.py  rapidfuzz_cmp.py  semantic.py
src/text_similarity/entities/: __init__.py  base.py  inspector.py  normalizer.py  registry.py
src/text_similarity/entities/extractors/: __init__.py  date.py  dimension.py  money.py  number.py  product_model.py
src/text_similarity/pipeline/: __init__.py  backends.py  cache.py  parallel.py  parallel_preprocess.py  pipeline.py  stage.py
src/text_similarity/preprocessing/: __init__.py  lemmatization.py  stopwords.py  text_cleaner.py  tokenizer.py
src/text_similarity/tuning/: __init__.py  calibrator.py  report.py
tests/: test_cpf_cnpj.py  test_user_cases.py
tests/integration/: test_api.py  test_end_to_end.py  test_semantic_parallel.py
tests/unit/: test_algorithms.py  test_async.py  test_bm25.py  test_comparator.py  test_comparator_optional_preprocessing.py  test_compare_batch.py  test_compare_many_to_many.py  test_dataframe.py  test_dense_index.py  test_dense_semantic_shortcircuit.py  test_entities.py  test_fusion.py  test_infra.py  test_lemmatization.py  test_lint.py  test_parallel.py  test_pipeline.py  test_preprocessing.py  test_public_exports.py  test_reranker_vector_db.py  test_rrf_integration.py  test_semantic.py  test_tuning.py  test_unused_imports.py
