[project]
name = "text-similarity"
version = "0.1.0-dev.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dateparser>=1.2.2",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true
