[project]
name = "text-similarity"
version = "0.1.0-rc.1"
description = "Biblioteca Python para comparação de similaridade de textos em Português Brasileiro, com suporte a entidades numéricas, fonética PT-BR e pipeline de pré-processamento modular."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dateparser>=1.2.2",
    "numpy>=1.24.4",
    "rapidfuzz>=3.9.7",
    "scikit-learn>=1.3.2",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D1"]

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dateparser"
ignore_missing_imports = true
