[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/text_similarity"]

[project]
name = "text-similarity-br"
version = "0.4.0"
description = "Biblioteca Python para comparação de similaridade de textos em Português Brasileiro, com suporte a entidades numéricas, fonética PT-BR e pipeline de pré-processamento modular."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Joscelino", email = "joscelino.oliveira@gmail.com" },
]
keywords = [
    "nlp",
    "text-similarity",
    "portuguese",
    "pt-br",
    "levenshtein",
    "cosine",
    "phonetics",
    "entity-extraction",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Portuguese (Brazilian)",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "dateparser>=1.2.2",
    "numpy>=1.24.4",
    "rapidfuzz>=3.9.7",
    "scikit-learn>=1.3.2",
    "sentence-transformers>=3.2.1",
]

[project.urls]
Homepage = "https://github.com/joscelino/text_similarity"
Documentation = "https://text-similarity.readthedocs.io/pt-br/latest/"
Repository = "https://github.com/joscelino/text_similarity"
"Bug Tracker" = "https://github.com/joscelino/text_similarity/issues"

[project.optional-dependencies]
nlp = [
    "spacy>=3.7.0",
]
semantic = [
    "sentence-transformers>=2.0.0",
    "torch>=1.13.0,<2.5.0",
]
tuning = [
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D1"]

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dateparser"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/text_similarity"]
omit = [
    "src/text_similarity/__init__.py",
    "src/text_similarity/core/__init__.py",
    "src/text_similarity/entities/__init__.py",
    "src/text_similarity/entities/extractors/__init__.py",
    "src/text_similarity/pipeline/__init__.py",
    "src/text_similarity/preprocessing/__init__.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "pass",
]
